<resources>
    <string name="app_name">WeatherProject</string>
    <string name="search">Search</string>
    <string name="dummy_date">5 May 10:00</string>
    <string name="dummy_numbers">100</string>
    <string name="pressure">Pressure</string>
    <string name="max_temp">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature_F">Temperature F</string>
    <string name="day">Day 17</string>
    <string name="night">Night 9</string>
    <string name="main_temp">21*</string>
    <string name="feels_like">Feels like 25*</string>
    <string name="weather_type">Drizzle</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>

</resources>